--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port=8081
+
+spring.jpa.show-sql=true
+
+jwt.secret.key=G37cfUp9nhwlxZDL2x0ecfKpzbhMT7zHYS786T4n0II
+jwt.time.expiration=30000
