--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ server.port=8081
 spring.jpa.show-sql=true
 
 jwt.secret.key=G37cfUp9nhwlxZDL2x0ecfKpzbhMT7zHYS786T4n0II
-jwt.time.expiration=30000
+jwt.time.expiration=6000000
